css/main.css
@import url('https://fonts.googleapis.com/css2?family=Borel&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Borel&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

:root {
    --color: red;
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    /*font-family: "Open Sans", sans-serif;*/
    font-family: "Poppins", sans-serif;
}


html,
body {
    height: 100%;
}

body {
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
}

main {
    display: flex;
    flex-direction: column;
    align-items: center;
    flex: 1;
    margin-top: 1em;
}

main > div {
    align-items: center;
    display: flex;
    flex-direction: column;
}

h2 {
    text-align: center;
    padding: 1em;
    font-size: larger;
}

p {
    text-align: center;
}


/*----CHS----*/

#CHSMainImg {
    width: 100%;
    max-height: 60em;
    object-fit: cover;
    object-position: top;
}

#CHSMainSection {
    margin-top: 5em;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 5em;
    width: 80%;
}
#CHSMainSection > div {
    width: 15em;
    aspect-ratio: 0.8;
    text-align: center;
    background-size: cover;
    background-position: center;
    border-radius: 60px;

    display: flex;
    justify-content: center;
    align-items: center;
}

#CHSMainSection_oNas {
    background-image:url(../res/indexUvod.jpg);
}
#CHSMainSection_oNas > a {
    align-self:flex-end;
    color: white;
    background-color: rgba(0, 0,    0, 0.2);
    margin: 1em;
    padding: 0px 4px ;
    border-radius: 10px;
}

#CHSMainSection_nasiPsi {
    background-image:url(../res/CHSArwenAAshley.jpg);
}
#CHSMainSection_nasiPsi > a {
    align-self: flex-start;
    color: white;
    background-color: rgba(0, 0,    0, 0.2);
    margin: 1em;
    padding: 0px 4px ;
    border-radius: 10px;
}

#CHSMainSection_vrhy {
    background-image:url(../res/CHSVrhy.JPG);
}
#CHSMainSection_vrhy > a {
    color: rgb(26, 241, 26);
    align-self: flex-end;
    background-color: rgba(0, 0,    0, 0.2);
    margin: 1em;
    padding: 0px 4px ;
    border-radius: 10px;
}



/* ------- O nas ------- */

#oNasMain {
    width: 90%;
    justify-content: center; 
    align-items: center;
}

#imgONas {
    width: 100%;
    border-radius: 10px;
    margin: 1em;
} 

#oNasText {
    display: flex;
    align-items: start;
    
}
#oNasText > p {
    text-align: left;
}


/* ------- Nasi Psi --------- */

#mainNasiPsi {
    margin-top: 1em;
}

#mainNasiPsi > h2 {
    margin: 3em 0em;
    margin-top: 0em;
}

#mainNasiPsi > section {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 2em;

    width: 90%;
}

#mainNasiPsi > section > div {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: ce;
    gap: 1em;
}

#mainNasiPsi > section  > img {
    width: 30em;
    border-radius: 20px;
}

#mainNasiPsi > section > div > h3 {
    padding: 1em;
}

#mainNasiPsi > section > div > p {
    text-align: left;
}

#mainNasiPsi > section > div > ul {}

/*-------- Vrhy --------*/

#mainVrhy {
    gap: 1em;
    width: 100%;
}

#mainVrhy > section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    padding: 1em;
    width: 100%;
}

#mainVrhy > section > p {
    text-align: left;
}


#sectionVrhA {}
#sectionVrhA > div  {
    margin-top: 2em;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 1em 2em;
}

#sectionVrhA > div > img {
    width: 80%;
    min-width: 20em;
    aspect-ratio: 1.5;
    object-fit: cover;
    border-radius: 20px;
}


@media only screen and (min-width: 900px) {
    #indexMainDiv {
        align-self: center;
        display: flex;
        flex-direction: row;
        justify-content: center;
    }

    #oNasMain {
        flex-direction: row;
        align-items: center;
        justify-content: center;
    }

    #imgONas {
    width: 70%;
    border-radius: 10px;
    margin: 1em;
    } 

    #mainNasiPsi > section {
        flex-direction: row;
        margin-top: 3em;
    }    

    #oNasText {
    width: 70%;
    align-self: center;
    }

    #sectionVrhA > div > img {
        width: 40%;
    }
    
}

